--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <h3>Find me on ...</h3>
                 <ul class="social">
                     <li><a href="https://shorturl.at/VAmcA" class="social-icon"><img src="images/instagram.png" alt="Instagram" /></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/tiktok.png" alt="TikTok" /></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/facebook.png" alt="FaceBook" /></a></li>
+                    <li><a href="https://vm.tiktok.com/ZSYwUuDrA/" class="social-icon"><img src="images/tiktok.png" alt="TikTok" /></a></li>
+                    <li><a href="https://www.facebook.com/that.crypto.madame?mibextid=ZbWKwL" class="social-icon"><img src="images/facebook.png" alt="FaceBook" /></a></li>
                 </ul>
             </div>
         </div>
